deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helados-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helados-app
  template:
    metadata:
      labels:
        app: helados-app
    spec:
      containers:
      - name: helados-app
        image: andreabrandi/apirest:v1
        ports:
        - containerPort: 80
